2004-02-29  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-sel-eng.c: 
	(put_css_properties_in_props_list): fixed a small bug in here:
	Always Initialise output function argument !!!.

2004-02-29  Dodji Seketeli <dodji@gnome.org>

	* src/cr-prop-list.[ch], src/Makefile.am,src/libcroco.h: 
	Created this new CRPropList class.
	* src/cr-sel-eng.c: 
	(put_css_properties_in_props_list): added this new helper
	function.
	(cr_sel_eng_get_matched_properties_from_cascade):
	Created a new version of this function to make it use
	the new CRPropList instead of a hashtable. Putting
	properties/declaration in a hashtable make us loose
	the "order" in which declarations are present in the
	ruleset. That's why I use a CRPropList instead.
	* src/cr-style.c: 
	(cr_style_set_style_from_decl): fix a silly error that
	make border-right and border-top switch.

2004-02-26  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-sel-eng.c: 
	(cr_sel_eng_get_matched_properties_from_cascade):
	Second (or maybe third) attempt to fix the cascading
	cascading thing. I got *really* confused here.
	I hope it works this time.
	Thanks to to Rob BUIS who reported the bug.
	Off to bed now.

2004-02-24  Dodji Seketeli <dodji@gnome.org>

	* src/cr-parser.c: 
	(cr_parser_parse_import): fixed a parsing bug reported
	by David A Knight. This should now properly parse
	sequences of @import rules that without media parts.
	* src/cr-statement.c: (cr_statement_dump_import_rule):
	fixed a serialisation bug here.

2004-02-24  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-parser.c,src/cr-tknzr.c,src/cr-token.[ch]: 
	 added the support of
	vendor specific property names.
	
2004-02-19  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-sel-eng.c: 
	(cr_sel_eng_get_matched_properties_from_cascade): Fixed a bug
	that was "forgetting" all the properties gathered during the
	cascading algorithm but the last ones.
	* tests/Makefile.am: a bit of cleanup here.

2004-02-14  Dodji Seketeli  <dodji@gnome.org>
