@@ -1,5 +1,11 @@
 2004-02-29  Dodji Seketeli  <dodji@gnome.org>
 
+	* src/cr-statement.[ch],src/cr-stylesheet.[ch]:
+	applied a patch from Rob BUIS that provides new apis
+	to manipulate CSS statements.
+
+2004-02-29  Dodji Seketeli  <dodji@gnome.org>
+
 	* src/cr-sel-eng.c: 
 	(put_css_properties_in_props_list): fixed a small bug in here:
 	Always Initialise output function argument !!!.
